# audits

./: README.md  notes.txt
magma/fuzzing/: BUILD.bazel  nas5g_message_decode.cpp  nas_message_decode.cpp
magma/fuzzing/nas5g_message_decode_seed_corpus/: AmfUeContextTestServiceRequestProc_pdu.raw  AmfUeContextTestServiceRequestProc_pdu2.raw  ciphertext.raw  pdu_session_est_req_type1.raw  pdu_session_est_req_type3.raw  pdu_session_release_complete.raw  reg_req_security_capability_len_zero.raw  reg_resync_buffer.raw  service_request_without_uplink_status.raw  test_optional_dnn_dotted_pdu.raw  test_optional_dnn_pdu0.raw  test_optional_pdu.raw  test_protocol_configuration_options_pdu.raw
magma/fuzzing/nas_message_decode_seed_corpus/: all.raw  main2.raw  main9.raw
ton/: CMakeLists.txt  Dockerfile  asan.txt  build.sh
ton/Docker/: Dockerfile  build.sh
ton/Docker/patch/: validator-group.hpp.patch
ton/fuzzing/: func.cpp  fuzz-asm.cpp  fuzz-basic.cpp  fuzz-block.cpp  fuzz-ed25519.cpp  fuzz-fift.cpp  fuzz-http.cpp  fuzz-json.cpp  fuzz-raptorq.cpp  fuzz-torrent.cpp  fuzz-vm.cpp
ton/harness/: asm.cpp  boc.cpp  fift.cpp
ton/harness/asm_seed_corpus/: report3_1.asm  report3_2.asm  report3_3.asm  report3_4.asm  report3_6.asm  report3_int_overflow_2.asm  report3_loop_2.asm  report3_loop_3.asm  report3_loop_4.asm  report3_loop_6.asm  report3_qnot.asm
ton/harness/boc_seed_corpus/: serialized_idx.raw  serialized_idx_crc.raw  test1.raw  test2.raw  test4.raw  test5.raw
ton/harness/vm_seed_corpus/: data
ton/reports/: GDBrun  README.MD
ton/reports/fift_report/bugs/: bug.1.raw  bug.2.raw
ton/reports/fift_report/patch/: README.MD  fift.cpp
ton/reports/func_report/bugs/: bug.1.raw  bug.10.raw  bug.11.raw  bug.12.raw  bug.13.raw  bug.14.raw  bug.15.raw  bug.16.raw  bug.17.raw  bug.18.raw  bug.19.raw  bug.2.raw  bug.20.raw  bug.21.raw  bug.22.raw  bug.23.raw  bug.24.raw  bug.25.raw  (+32 more)
(+139 files in other folders)
